# SerDesAdapter

./: LICENSE  README.md  TODO.md
src/: CMakeLists.txt  build.sh  cppcheck.supp
src/app/cli/: CMakeLists.txt
src/app/cli/src/: CLI.cpp  CLI.hpp
src/cmake/: AAGitInfo.cmake
src/details/: TCRC8T1Node.hpp  TScalarNode.hpp
src/lib/libSerDesAdapter/: CMakeLists.txt  ProtoPacket.cpp  ProtoPacket.hpp
src/lib/libSerDesAdapter/unit_test/: CMakeLists.txt
src/lib/libSerDesAdapter/unit_test/src/: ProtoPacket.hpp  packet.json5  test.test.cpp
src/tests/: ProtoPacket.cpp  ProtoPacket.hpp
